<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Zone de saisie + micro -->
    <LinearLayout
        android:id="@+id/inputRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <!-- Champ texte (4/5 largeur) -->
        <EditText
            android:id="@+id/editCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/code_d_partement"
            android:importantForAutofill="no"
            android:inputType="none"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <!-- Micro (1/5 largeur) -->
        <Button
            android:id="@+id/btnVoice"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:text="@string/mic"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- Résultat texte -->
    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text=""
        android:background="@color/purple_200"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <!-- Image département, prend tout le reste -->
    <ImageView
        android:id="@+id/imageDepartement"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/desc_departement"
        android:scaleType="fitCenter" />

</LinearLayout>
